--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon server.js",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +21,11 @@
     "ts-fsrs": "^5.2.3"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
+    "eslint": "^10.0.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
+    "globals": "^17.3.0",
     "nodemon": "^3.1.14",
     "prettier": "^3.8.1"
   }
