--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "recurse-srs",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "scripts": {
-    "dev": "wrangler pages dev public",
+    "dev": "nodemon --exec 'node --env-file=.env' server.js",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint .",
@@ -12,13 +13,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.21.2"
+  },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
     "eslint": "^10.0.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
     "globals": "^17.3.0",
-    "prettier": "^3.8.1",
-    "wrangler": "^4.68.1"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.8.1"
   }
 }
